update layout to fit panel borders

--- a/webpack/src/index.html
+++ b/webpack/src/index.html
@@ -68,7 +68,7 @@ p {
 
 
 <div class="columns">
-	<div class="column_nav">
+	<div class="column_nav valign">
 		<nav class="nav">
 			<div class="nav_toggle">
 				<div class="tab-menu">
@@ -84,7 +84,7 @@ p {
 	<div class="column_primary">
 		<div id="widget"></div>
 	</div>
-	<div class="column_secondary">
+	<div class="column_secondary valign">
 		<div id="result"></div>
 	</div>
 </div>	
